<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宝龙广场</string>
    <string name="login">登录</string>
    <string name="login_pj_title">宝龙商城</string>
    <string name="login_hint_name">用户名称</string>
    <string name="login_hint_pwd">用户密码</string>
    <string name="auto_login">登录</string>
    <string name="registration">注册</string>
    <string name="homepage_title">宝龙城市广场</string>
    <string name="account_need_login">未登录</string>
    <string name="action_list">导航</string>
    <string name="logout_dlg_msg">请确定是否注销.</string>
    <string name="logout_pos_btn">确定.</string>
    <string name="logout_neg_btn">取消</string>
    <string name="tab_home">首页</string>
    <string name="tab_search">搜索</string>
    <string name="tab_shopping_cart">购物车</string>
    <string name="tab_my_account">我的账户</string>
    <string name="tab_more">更多</string>
    <string name="tab_nearby">附近</string>
    <string name="select_home">请选择常居地</string>
    <string name="home_loading">常居地读取中</string>
    <string name="home_loading_failed">常居地读取失败</string>
    <string name="loc_status_loading">"GPS定位中..."</string>
    <string name="loc_status_failed">GPS定位失败"</string>
    <string name="city_list">城市列表</string>
    <string name="category_floor">楼层</string>
    <string name="category_shopping">购物</string>
    <string name="category_food">美食</string>
    <string name="category_buy">团购</string>
    <string name="category_activity">活动</string>
    <string name="category_recreation">娱乐</string>
    <string name="category_brand">品牌</string>
    <string name="brand">品牌</string>
    <string name="search_filter_hint">请输入搜索内容</string>
    <string name="search_bar_cancle">取消</string>
    <string name="search_list_clear">清空历史记录</string>
    <string name="capture_name">QR Code Capture</string>
    <string name="encoder_name">QR Code Encoder</string>
    <string name="decoder_name">QR Code Decoder</string>
    <string name="msg_default_format">Format</string>
    <string name="barcode_image">Barcode Image</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_status"> </string>
    <string name="goods">商品</string>
    <string name="shop">店铺</string>
    <string name="popular">人气</string>
    <string name="sales">销量</string>
    <string name="price">价格</string>
    <string name="category">类别</string>
    <string name="grade">等级</string>
    <string name="back">返回</string>
    <string name="str_price_value_default">0-∞</string>
    <string name="str_shop_service_value_default">未选择</string>
    <string name="selled_str_searchlist">月销量：</string>
    <string name="area_str">所在地:</string>
    <string name="favour_txt">收藏人數:</string>
    <string name="shopping_cart_total">合计：</string>
    <string name="shopping_cart_num">数量：</string>
    <string name="select_all">全选</string>
    <string name="edit_goods_dlg_title">主题功能</string>
    <string name="add_to_favour">移入收藏夹</string>
    <string name="edit_goods">编辑购买信息</string>
    <string name="delete">删除</string>
    <string name="cart_edit_count_title">修改购买数量</string>

    <!-- account list item main ui -->
    <string name="str_my_order">我的订单</string>
    <string name="str_groupon">团购券</string>
    <string name="str_coupon">优惠券</string>
    <string name="str_my_favour">我的收藏</string>
    <string name="str_settings">设置</string>
    <string name="str_search_no_match_result" formart="true">抱歉！没有找到与<![CDATA[<font color=\"#da6432\">&#034%1$s&#034</font>]]>相关的%2$s</string>
    <string name="str_get_result_exception" formart="true">抱歉！网络通信异常,请点此重试,并检查您的网络状态.</string>
	<string name="str_current_store">库存 </string>
	<string name="str_all_goods">全部商品</string>
    
    <!-- account list item setting ui -->
    <string name="str_setting_no_value">未设置</string>
    <string name="str_setting_title">设置</string>
    <string name="str_setting_nick_tag">用户昵称</string>
    <string name="profile_edit_nickname">修改昵称</string>
    <string name="profile_input_nickname_text">请输入昵称</string>
    <string name="str_setting_nick_default">未设置</string>
    <string name="str_setting_profile_tag">我的账户</string>
    <string name="str_setting_profile_default">未设置</string>
    <string name="str_setting_notify_tag">接收通知</string>
    <string name="str_setting_notify_tag_accepted">接受通知</string>
    <string name="str_setting_notify_tag_timerange">通知时段</string>
    <string name="str_setting_support_tag">支持宝龙广场</string>
    <string name="str_setting_support_help">帮助中心</string>
    <string name="str_setting_support_contacts">联系客服</string>
    <string name="str_setting_support_scored">给宝龙广场评个分吧!</string>
    <string name="str_setting_about_tag">关于</string>
    <string name="str_setting_about_update">版本更新</string>
    <string name="str_setting_about_us">关于我们</string>
    <string name="str_setting_about_agreement">服务协议</string>
    <string name="str_setting_logout">注销当前用户</string>
    <string name="str_friendly_tips">注册登陆,更多便捷带给您和您的家人</string>
    <string name="profile_mobile_num_text">手机号</string>
    <string name="profile_email_text">邮箱地址</string>
    <string name="email_bind_status">未绑定</string>
    <string name="profile_input_email_text">请输入邮箱地址</string>
    <string name="profile_input_pwd_text">6-20个大小写英文字母、符号或数字</string>
    <string name="profile_edit_email_address">修改邮箱地址</string>
    <string name="profile_edit_email_hint">您的新邮箱地址</string>
    <string name="profile_edit_email_notify">请输入邮箱地址,您可以用验证过的邮箱来找回账号密码.</string>
    <string name="profile_edit_mobile_number">修改手机号码</string>
    <string name="profile_edit_mobile_hint">您的新手机号码</string>
    <string name="profile_edit_mobile_inputcode_hint">请输入短信验证码</string>
    <string name="profile_get_message_code_normal">获取短信验证码</string>
    <string name="profile_get_message_code_press" formart="true">正在获取(%1$d秒)</string>
    <string name="str_login_hint_name">邮箱/手机号</string>
    <string name="str_login_hint_pwd">请输入密码</string>
    <string name="str_next_step">下一步</string>
    <string name="str_register_type_mobile">手机注册</string>
    <string name="str_register_type_mail">邮箱注册</string>
    <string name="str_register_cofirm_info_tips">请确认您的国家并输入手机号</string>
    <string name="str_register_country_and_region">国家和地区</string>
    <string name="str_register_region_id">中国 +86</string>
    <string name="str_register_input_num">请填写手机号码</string>
    <string name="str_register_cofirm_agreement">已阅读并同意\n使用条款和隐私政策</string>
    <string name="str_register_thirdparty_sso">第三方账号登录</string>
    <string name="str_register_verify_tips">我们已发送<![CDATA[<font color=\"#126723\">验证码短信</font>]]>到这个手机号</string>
    <string name="str_register_count_down_tips" formart="true">接受短信大约需要%1$d秒钟</string>
    <string name="str_register_input_verify_code">请输入验证码</string>
    <string name="str_cash_coupon_status_used">已使用</string>
    <string name="str_cash_coupon_status_not_used">未使用</string>
    <string name="str_cash_coupon_status_expired">已过期</string>
    <string name="str_cash_coupon_no_thing">没有优惠券信息</string>
    <string name="str_cash_coupon_expire_time" formart="true">有效期&#058;%1$s&#045;%2$s</string>
    <string name="str_notification">通知</string>
    <string name="str_notification_all">全部</string>
    <string name="str_notification_trade">交易</string>
    <string name="str_notification_system">系统</string>
    <string name="str_notification_new">当前最新</string>
    <string name="str_notification_mycoupon">我的优惠券</string>
    <string name="str_myorder">我的订单</string>
    <string name="str_myorder_search">搜索全部订单</string>
    <string name="str_myorder_state">订单状态</string>
    <string name="str_helpcenter">帮助中心</string>
    <string name="str_helpcenter_selectorder">如何查询订单</string>
    <string name="str_helpcenter_updateorder">如何修改订单</string>
    <string name="str_helpcenter_cancleorder">如何取消订单</string>
    <string name="str_helpcenter_couponrule">团购规则</string>
    <string name="str_helpcenter_notreceive_item">收不到商品怎么办</string>
    <string name="str_helpcenter_return_shows">退换货说明</string>
    <string name="str_helpcenter_receivestate">如何签收或拒收商品</string>
    <string name="str_helpcenter_repair_rule">报修/退换准则</string>
    <string name="str_helpcenter_kindly_reminder">温馨提示</string>
    <string name="str_helpcenter_send_mode">发回方式</string>
     <string name="str_settingsrviceagreement">服务协议</string>
    <string name="str_price_prifix" formart="true">&#165;%1s</string>
    <string name="str_sellnum_suffix" formart="true">%1s件</string>
    <string name="str_blank_list" formart="true"><![CDATA[<font color=\"#126723\">%1s</font>]]>列表为空</string>
	<string name="send_type1">宝龙快送</string>
	<string name="send_type2">商家配送</string>
	<string name="check_out">  结算</string>
	
	<!-- 支付宝 -->
	<string name="activity_remote_service_binding">AppDemo4</string>
	<string name="remote_call_failed">Failure calling remote service</string>       
	<string name="partnerHint">"partner"</string>
	<string name="sellerHint">"seller"</string>
	<string name="out_trade_noHint">"out_trade_no"</string>
	<string name="subjectHint">"subject"</string>
	<string name="bodyHint">"body"</string>
	<string name="total_feeHint">"total_fee"</string>
	<string name="notify_urlHint">"notify_url"</string>
	<string name="charsetHint">"charset"</string>
	<string name="signTypeHint">"signType"</string>	
	<string name="confirm_install_hint">"安装提示"</string>	
	<string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>	
	<string name="Ensure">"确定"</string>
	<string name="Cancel">"取消"</string>
	<string name="check_sign_failed">您的订单信息已被非法篡改。</string> 
</resources>