<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/copoun_sort_bar_bg_height"
    android:background="@drawable/bg_grey_repeat"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/global_view_margin"
        android:layout_marginRight="@dimen/global_view_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/sort_all"
            android:layout_width="0dip"
            android:layout_height="@dimen/copoun_sort_bar_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_left_yellow"
            android:text="@string/str_notification_all"
            android:textColor="@color/coupon_sort_bar_txt_color"
            android:textSize="@dimen/text_size_medium" />
			
        	<requestFocus/>
        	
       	<View style="@style/SortBar.Divider" />
       	
        <Button
            android:id="@+id/sort_trade"
            android:layout_width="0dip"
            android:layout_height="@dimen/copoun_sort_bar_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_middle_yellow"
            android:text="@string/str_notification_trade"
            android:textColor="@color/coupon_sort_bar_txt_color"
            android:textSize="@dimen/text_size_medium" />
		
		<View style="@style/SortBar.Divider" />
       	
        <Button
            android:id="@+id/sort_system"
            android:layout_width="0dip"
            android:layout_height="@dimen/copoun_sort_bar_height"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/selector_tab_right_yellow"
            android:text="@string/str_notification_system"
            android:textColor="@color/coupon_sort_bar_txt_color"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

</LinearLayout>