<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#f5f5f5">
    
     <include
	        android:id="@+id/custom_title"
	        layout="@layout/custom_title" />	
    <RelativeLayout 
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
       
        
        <EditText 
            android:id="@+id/login_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grey"
            android:singleLine="true"
            android:hint="@string/login_hint_name"
            android:paddingLeft="46sp"
            android:textColor="@color/black"
            />
        <ImageView 
            android:id="@+id/login_head_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_userame2x"
            android:layout_alignBottom="@id/login_name_et"
            android:layout_alignLeft="@id/login_name_et"
            />
        <ImageView 
            android:id="@+id/login_name_save_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/login_name_et"
            android:layout_alignBottom="@id/login_name_et"
            android:src="@drawable/btn_close"
            android:visibility="gone"
            />
        <!-- 密码 -->
        <EditText 
            android:id="@+id/login_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grey"
            android:singleLine="true"
            android:layout_below="@id/login_name_et"
            android:hint="@string/login_hint_pwd"
            android:paddingLeft="46sp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:imeOptions="actionGo"
            />
        <ImageView 
            android:id="@+id/login_pwd_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_password2x"
            android:layout_alignBottom="@id/login_pwd_et"
            android:layout_alignLeft="@id/login_pwd_et"
            />
        <ImageView 
            android:id="@+id/login_pwd_save_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/login_pwd_et"
            android:layout_alignBottom="@id/login_pwd_et"
            android:src="@drawable/btn_close"
            android:visibility="gone"
            />
        
         <CheckBox
            android:id="@+id/auto_login_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_pwd_et"
            android:text="@string/auto_login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auto_login_cb"
            android:background="@drawable/tab_indicator"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20.0dp"
            />
        <!-- <TextView 
            android:id="@+id/login_btn_tv"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/login_btn"
            android:text="@string/login"
            /> -->
        <ProgressBar 
            android:id="@+id/login_pd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/auto_login_cb"
            android:layout_alignBottom="@+id/auto_login_cb"
            android:layout_alignParentRight="true"
            android:text="@string/registration"
            android:textSize="16.0dp"
            android:textColor="#333333" />

    </RelativeLayout>

</LinearLayout>

