<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/top_bg2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/ImageButton.Title.LeftButton"
            android:layout_centerVertical="true"
            android:src="@drawable/selector_btn_back_left" />

        <TextView
            android:id="@+id/txTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:gravity="center"
            android:text="@string/str_helpcenter_return_shows"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge" />
    </RelativeLayout>
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginTop="20dp"
    android:paddingLeft="@dimen/global_view_margin">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/str_helpcenter_kindly_reminder"
            />
        <TextView
            android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_xsamll"
            android:text="小心假冒"   
        />
        </LinearLayout>
        <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginTop="20dp"
    android:paddingLeft="@dimen/global_view_margin">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/str_helpcenter_repair_rule"
            />
        <TextView
            android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_xsamll"
            android:text="销售产品均为行货"   
        />
        </LinearLayout>
        <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginTop="20dp"
    android:paddingLeft="@dimen/global_view_margin">
       <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:text="@string/str_helpcenter_send_mode"
            />
        <TextView
            android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_xsamll"
            android:text="销售产品均为行货"   
        />
        </LinearLayout>
</LinearLayout>
